2005-09-19  Juanma Barranquero  <lekktu@gmail.com>

	* mh-print.el (mh-ps-print-msg-show): Fix misplaced parenthesis in
	previous change.

2005-09-18  D Goel  <deego@gnufans.org>

	* mh-alias.el (mh-alias-ali): Fix `message' call: first arg
	should be a format spec.

	* mh-print.el (mh-ps-spool-buffer, mh-ps-spool-a-msg)
	(mh-ps-print-msg, mh-ps-print-msg-show): Ditto.

	* mh-mime.el (mh-toggle-mh-decode-mime-flag): Ditto.

	* mh-index.el (mh-index-sequenced-messages): Ditto.

	* mh-e.el (mh-refile-or-write-again, mh-page-msg): Ditto.

	* mh-junk.el (mh-junk-blacklist, mh-junk-whitelist)
	(mh-spamassassin-blacklist, mh-spamassassin-whitelist): Ditto.

2005-08-15  Dan Nicolaescu  <dann@ics.uci.edu>

	* mh-customize.el: Do not use face-alias compatibility for
	faces that did not appear in the previous Emacs release.

2005-08-10  Lars Hansen  <larsh@soem.dk>

	* mh-e.el: Add handler to desktop-buffer-mode-handlers.
	(mh-restore-desktop-buffer): Remove autoload cookie.
	(mh-folder-mode): Add autoload cookie.

2005-07-04  Lute Kamstra  <lute@gnu.org>

	Update FSF's address in GPL notices.

2005-06-17  Lute Kamstra  <lute@gnu.org>

	* mh-customize.el (mh-folder-body-face, mh-folder-cur-msg-face)
	(mh-folder-cur-msg-number-face): New backward-compatibility
	aliases for renamed faces.

2005-06-17  Miles Bader  <miles@gnu.org>

	* mh-customize.el (mh-folder-body, mh-folder-cur-msg)
	(mh-folder-cur-msg-number, mh-folder-date, mh-folder-followup)
	(mh-folder-msg-number, mh-folder-refiled, mh-folder-subject)
	(mh-folder-tick, mh-folder-to, mh-index-folder)
	(mh-letter-header-field, mh-show-cc, mh-show-date)
	(mh-show-header, mh-show-pgg-good, mh-show-pgg-unknown)
	(mh-show-pgg-bad, mh-show-signature, mh-show-to, mh-show-from)
	(mh-show-xface, mh-speedbar-folder, mh-speedbar-selected-folder)
	(mh-speedbar-folder-with-unseen-messages)
	(mh-speedbar-selected-folder-with-unseen-messages)
	(mh-folder-msg-number, mh-folder-subject, mh-folder-followup)